--- a/gb/17/8/12/n9522212.md
+++ b/gb/17/8/12/n9522212.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/nmgwo2798/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nmgwo2798/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/nmgwo2798/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/nmgwo2798/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/nmgwo2798/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nmgwo2798/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/nmgwo2798/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/nmgwo2798/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/nmgwo2798/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/nmgwo2798/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/nmgwo2798/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/nmgwo2798/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/nmgwo2798/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/nmgwo2798/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/nmgwo2798/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/nmgwo2798/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/nmgwo2798/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/nmgwo2798/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/nmgwo2798/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/nmgwo2798/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/nmgwo2798/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/nmgwo2798/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/nmgwo2798/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/nmgwo2798/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/nmgwo2798/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/nmgwo2798/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/nmgwo2798/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/nmgwo2798/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/nmgwo2798/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/nmgwo2798/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/nmgwo2798/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/nmgwo2798/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/nmgwo2798/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/nmgwo2798/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/nmgwo2798/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/nmgwo2798/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/nmgwo2798/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/nmgwo2798/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/nmgwo2798/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/nmgwo2798/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/nmgwo2798/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/nmgwo2798/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/nmgwo2798/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/nmgwo2798/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/nmgwo2798/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>高天韵：回归传统 仰望神 川普演讲的启示</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2017/08/20170812-DianeGao-Trump.jpg" />
 <h6>川普在8月16日的推文中说，金正恩停止对关岛的威胁，是做出了明智、合理的决定。(Chip Somodevilla/Getty Images)
 </h6>
 <hr>
-	<p>【大纪元2017年08月12日讯】<ahref="https://github.com/nmgwo2798/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>入主白宫，带来关于天意和道德的思考。人们注视着走上正轨的美国，见证其经济的增长和民族精神的重振。自大选获胜以来，川普在国内和海外发表了多次演讲，给人留下深刻的印象。</p>
+	<p>【大纪元2017年08月12日讯】<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>入主白宫，带来关于天意和道德的思考。人们注视着走上正轨的美国，见证其经济的增长和民族精神的重振。自大选获胜以来，川普在国内和海外发表了多次演讲，给人留下深刻的印象。</p>
 <h2><strong>胜选感言 服务于民</strong></h2>
-<p>去年11月9日凌晨，<ahref="https://github.com/nmgwo2798/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>发表了胜选感言。没有狂喜或炫耀，川普谦逊地表示，成为总统，是他的荣幸。他感谢了很多人──所有支持者，家人、朋友、特勤局、纽约的执法人员，还有竞争对手。</p>
+<p>去年11月9日凌晨，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>发表了胜选感言。没有狂喜或炫耀，川普谦逊地表示，成为总统，是他的荣幸。他感谢了很多人──所有支持者，家人、朋友、特勤局、纽约的执法人员，还有竞争对手。</p>
 <p>川普首次以当选总统的身份，强调“我们”和“美国人”。他说：“我向美国土地上每一个公民做出保证，我将成为所有美国人的总统，这对于我非常重要。对于过去选择不支持我的人，我向你伸出双手，请你指导和帮助，使我们可以一起工作，使我们的国家成为伟大的国家。”</p>
 <p>川普指出，不同种族、信仰和背景的人士期待政府服务于民。他特别提到“被遗忘的人们”，也承诺“将照顾忠诚伟大的老兵”。“我们的工作现在才真正刚刚开始。我们会立即开始为美国人民工作。”</p>
 <p>于是，世界拭目以待。</p>
@@ -17,7 +17,7 @@
 <p>他说：“我们是一个国家──他们的痛苦就是我们的痛苦。他们的梦想就是我们的梦想；他们的成功将是我们的成功。我们同心同德、共享一个家、承担一个共同的光荣命运。”</p>
 <p>“这是你们的日子，这是你们的庆典，美利坚合众国就是你们的国家。”“你们的声音，你们的希望和你们的梦想，将决定美国的命运。你们的勇气、善良和爱将永远指导我们的道路。”</p>
 <p>“真正重要的，并非哪一个党派操控政府，而是这个政府是否由人民主掌”。“团结一致，我们将使美国再次强大。”</p>
-<p>此外，川普还表达了对神的敬意：“上帝保护着我们。”<ahref="https://github.com/nmgwo2798/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE%E6%96%B0%E6%94%BF.md#1">川普新政</a>，就此开启新局。</p>
+<p>此外，川普还表达了对神的敬意：“上帝保护着我们。”<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE%E6%96%B0%E6%94%BF.md#1">川普新政</a>，就此开启新局。</p>
 <h2><strong>跨越分歧 重振雄风</strong></h2>
 <p>2017年2月18日晚，川普总统首次向国会参众两院联席会议发表演讲。川普以深沉的语气，侃侃而谈，叙述其上任一个月的政绩，并阐述未来的施政方针及具体措施。他呼吁人们跨越党派的分歧，为了美国的强大和全民的梦想共同努力。</p>
 <p>川普说：“一代代美国人传递着真理、自由和公正的火炬，不断地传承，直至今日。现在，这把火炬传到了我们手中。我们要用它来点亮世界。今晚我在这里传达团结和力量的信息，这是发自我心深处的信息。”</p>
@@ -25,7 +25,7 @@
 <p>“我们是一个整体，有着共同的命运，流着同样的鲜血，向同一面伟大的美国国旗致敬，而且我们都是由同一位神所造。”</p>
 <p>真挚、深情的字句，清晰、理性的规划，展现了新任领导人的胸怀和愿景，迸发出动员全民的感染力和号召力。</p>
 <p>此次演讲博得了外界一致好评，获得了300万则推文，是历来国情咨文演说与联席会议中吸引推文最多的一次。会议之后的CNN/ORC民调显示，近七成民众认为，川普提出的政策会使国家走上正确的方向，同时近2/3的人表示，川普提出了正确的国家优先事项。</p>
-<figure id="attachment_9522230" style="width: 450px" class="wp-caption aligncenter"><img class="size-medium wp-image-9522230" src="https://i.epochtimes.com/assets/uploads/2017/08/20170812-TrumpSpeech-DianeGao-450x300.jpg" alt="川普总统于今年2月28日晚首次对国会演讲，获得了各界的积极评价。(Jim Lo Scalzo – Pool/Getty Images)" width="450" b="300" /><figcaption class="wp-caption-text">川普总统于今年2月28日晚首次对国会演讲，获得了各界的积极评价。(Jim Lo Scalzo – Pool/Getty Images)</figcaption></figure>
+<figure id="attachment_9522230" aria-describedby="caption-attachment-9522230" style="width: 450px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2017/08/20170812-TrumpSpeech-DianeGao-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img class="size-medium wp-image-9522230" src="https://i.epochtimes.com/assets/uploads/2017/08/20170812-TrumpSpeech-DianeGao-450x300.jpg" alt="川普总统于今年2月28日晚首次对国会演讲，获得了各界的积极评价。(Jim Lo Scalzo – Pool/Getty Images)" width="450" b="300" /></a><figcaption id="caption-attachment-9522230" class="wp-caption-text">川普总统于今年2月28日晚首次对国会演讲，获得了各界的积极评价。(Jim Lo Scalzo – Pool/Getty Images)</figcaption></figure>
 <h2><strong>正邪之战 守护未来</strong></h2>
 <p>5月21日，川普发表了在海外的首次演说。在沙特阿拉伯，他对50多名穆斯林国家领导人发表历史性讲话，呼吁把恐怖分子和极端分子“赶出地球”，这呼应了他在竞选期间提出的打击伊斯兰极端主义的政策。</p>
 <p>川普指出，几乎没有几个国家幸免于恐怖主义的威胁，因此“这是一场正邪之战”。“这不是一场不同信仰、不同教派或不同文明之间的战斗。这是一场企图毁灭人的生命的野蛮罪犯和尽力保护生命的所有宗教的正派公众之间的战斗。”</p>
@@ -47,36 +47,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/nmgwo2798/djy/blob/master/gb/17/2/28/n8859332.md#1">川普国会演说 擘划愿景 开启美国新篇章</a></li>
-<li><a href="https://github.com/nmgwo2798/djy/blob/master/gb/17/3/1/n8862387.md#1">川普国会演说反应佳 推文数破纪录</a></li>
-<li><a href="https://github.com/nmgwo2798/djy/blob/master/gb/17/3/1/n8862625.md#1">川普国会演讲激励人心 道指首次冲破21000点</a></li>
-<li><a href="https://github.com/nmgwo2798/djy/blob/master/gb/17/3/2/n8863953.md#1">川普首次国会演说 收视率超过今年奥斯卡</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/2/28/n8859332.md#1">川普国会演说 擘划愿景 开启美国新篇章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/3/1/n8862387.md#1">川普国会演说反应佳 推文数破纪录</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/3/1/n8862625.md#1">川普国会演讲激励人心 道指首次冲破21000点</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/3/2/n8863953.md#1">川普首次国会演说 收视率超过今年奥斯卡</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/19/n9971114.md#1" target="_blank">文革中自杀的几个名人（6）留美学者陈梦家</a></li><li><a href="https://github.com/nmgwo2798/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/3/30/n7475135.md#1" target="_blank">公安医院院长的晚期胃癌怎么好的？</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/27/n10343446.md#1" target="_blank">刘白：晚清张謇的幻想</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/3/n11232919.md#1" target="_blank">加拿大温莎市宣布 五月为该市法轮大法月</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/nmgwo2798/djy/blob/master/gb/20/4/30/n12074206.md#1">为何改变对习近平看法 川普首次详细说明</a></li>
-<li><a href="https://github.com/nmgwo2798/djy/blob/master/gb/20/5/1/n12075692.md#1">脱北韩国议员：99%确定金正恩上周已死</a></li>
-<li><a href="https://github.com/nmgwo2798/djy/blob/master/gb/20/5/2/n12076958.md#1">【拍案惊奇】朝媒报金正恩现身 习家邓家对呛？</a></li>
-<li><a href="https://github.com/nmgwo2798/djy/blob/master/gb/20/5/1/n12076815.md#1">【新闻看点】美连6大动作 美中角力升级</a></li>
-<li><a href="https://github.com/nmgwo2798/djy/blob/master/gb/20/5/1/n12076209.md#1">不小心？赵立坚转推中共瞒疫实情</a></li>
-<li><a href="https://github.com/nmgwo2798/djy/blob/master/gb/20/4/30/n12071809.md#1">印度一部电影在同一戏院每天放映 连续24年</a></li>
-<li><a href="https://github.com/nmgwo2798/djy/blob/master/gb/20/4/29/n12070504.md#1">中共再祭影视战狼条款 港台艺人或动辄遭索赔</a></li>
-<li><a href="https://github.com/nmgwo2798/djy/blob/master/gb/20/4/30/n12073796.md#1">否认与刘亦菲复合 宋承宪：手滑导致按赞帖文</a></li>
-<li><a href="https://github.com/nmgwo2798/djy/blob/master/gb/20/4/30/n12071652.md#1">琼瑶剧女星陈德容惊曝离婚 去年8月已签字</a></li>
-<li><a href="https://github.com/nmgwo2798/djy/blob/master/gb/20/4/30/n12073563.md#1">《魔发精灵2 》上线点播 或遭王健林AMC封杀</a></li>
-<li><a href="https://github.com/nmgwo2798/djy/blob/master/gb/20/4/23/n12054891.md#1">【文史】崇祯展开刘伯温遗画 惊见自己结局</a></li>
-<li><a href="https://github.com/nmgwo2798/djy/blob/master/gb/20/4/27/n12063415.md#1">【细语人生】FBI盯上了他（上）</a></li>
-<li><a href="https://github.com/nmgwo2798/djy/blob/master/gb/20/4/29/n12070494.md#1">玄武大帝除疫禳灾 人间留神迹</a></li>
-<li><a href="https://github.com/nmgwo2798/djy/blob/master/gb/20/2/25/n11893623.md#1">【命理】他为何由相信命运变成不相信命运？</a></li>
-<li><a href="https://github.com/nmgwo2798/djy/blob/master/gb/20/4/29/n12070777.md#1">专管掠走命外之财的冥府武官</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/nmgwo2798/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/nmgwo2798/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/8/12/n9522212.htm">高天韵：回归传统 仰望神 川普演讲的启示</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/8/12/n9522212.htm">高天韵：回归传统 仰望神 川普演讲的启示</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/nmgwo2798/djy/blob/master/gb/17/8/12/n9522212.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/nmgwo2798/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmgwo2798/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/nmgwo2798/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/nmgwo2798/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/nmgwo2798/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmgwo2798/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/nmgwo2798/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmgwo2798/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/nmgwo2798/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmgwo2798/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/nmgwo2798/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmgwo2798/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/nmgwo2798/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmgwo2798/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/nmgwo2798/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmgwo2798/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/nmgwo2798/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmgwo2798/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/nmgwo2798/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmgwo2798/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/nmgwo2798/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmgwo2798/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/nmgwo2798/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmgwo2798/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/nmgwo2798/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmgwo2798/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/nmgwo2798/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmgwo2798/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/nmgwo2798/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmgwo2798/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/nmgwo2798/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmgwo2798/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/nmgwo2798/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmgwo2798/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/nmgwo2798/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmgwo2798/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/nmgwo2798/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmgwo2798/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/nmgwo2798/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmgwo2798/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/nmgwo2798/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmgwo2798/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/nmgwo2798/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmgwo2798/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/nmgwo2798/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmgwo2798/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/nmgwo2798/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmgwo2798/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/17/8/12/n9522212.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
